implemented grunt configurations

--- a/public/index.html
+++ b/public/index.html
@@ -55,5 +55,5 @@
 <script>
     var socket = io();
 </script>
-<script src="/static/scripts/script.js"></script>
+<script src="/build/app.min.js"></script>
 </html>
